<resources>
    <string name="app_name">Recetario</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgotpassword">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="cargar_imagen">Cargar imagen</string>
    <string name="obtener_ubicaci_n">Obtener ubicación</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="nombredeusuario">Nombre de usuario</string>
    <string name="navigation_drawer_open">Abrir el cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar el cajón de navegación</string>
</resources>